examples/errors/parsing/factorial-curried-signature.cn
fun add : Int -> Int -> Int [pure] = {
  n m -> n + m
}

main : () [impure] = ()
